# karb

./: .gitignore  .tiltignore  AGENTS.md  Containerfile  README.md  Taskfile.yml  Tiltfile  index.yaml  pyproject.toml
.github/workflows/: chart.yml  container-publish.yml
charts/karb/: Chart.yaml  values.yaml
charts/karb/templates/: deployment.yaml  monitoring.yaml  serviceaccount.yaml
docs/: README.md  development.md  release-readiness.md
hack/: release.sh
hack/kind-e2e/: README.md  bootstrap.sh  build-and-load.sh  down.sh  load-image.sh  test.sh  up.sh
hack/kind-e2e/manifests/: test-pod.yaml
hack/kind-e2e/values/: karb-kind-values.yaml
src/: main.py
tests/: test_main.py
