[project]
name = "karb"
version = "0.1.0"
description = "Kubernetes app-controlled restore and backup operator"
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [
    {name = "Lars Solberg", email = "lars.solberg+karb@gmail.com"},
]
dependencies = [
    "kopf[dev]>=1.37.2,<2.0.0",
    "kubernetes>=29.0.0,<30.0.0",
    "prometheus-client>=0.20.0,<0.21.0",
]

[dependency-groups]
dev = [
    "kopf[dev]>=1.37.2,<2.0.0",
]

[tool.uv]
package = false
