[project]
name = "karb"
version = "0.1.0"
description = "Kubernetes app-controlled restore and backup operator"
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [
    {name = "Lars Solberg", email = "lars.solberg+karb@gmail.com"},
]
dependencies = [
    "kopf>=1.43.0,<2.0.0",
    "kubernetes>=35.0.0,<36.0.0",
    "prometheus-client>=0.24.1,<0.25.0",
]

[dependency-groups]
dev = [
    "kopf[dev]>=1.43.0,<2.0.0",
    "pytest>=8.4.2,<9.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
